--- a/style.css
+++ b/style.css
@@ -71,8 +71,8 @@ img{
     position: absolute;  
     top: 0;  
     bottom: 0;  
-    width: 1500px; 
-    height: 1000px; 
+    width: 100%; 
+    height: 100%; 
     left: 0;  
     right: 0;  
     margin: auto;
@@ -110,6 +110,7 @@ img{
 
 header { 
     background-color:#333; 
+    min-width: 165px;
 }
 
 header h1 {
@@ -160,13 +161,36 @@ header nav ul li {
     margin-left: 25px;
 }
 
-
-/*.div { 
-    background: url(assets/yeshi-kangrang-Qq7A85iCzhQ-unsplash.jpg) no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover; 
-    display: block; 
-}
-
+/* Add a black background color to the top navigation */
+.topnav {
+    background-color: #333;
+    overflow: hidden;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+  
+  /* Add an active class to highlight the current page */
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+  
+  /* Hide the link that should open and close the topnav on small screens */
+  .topnav .icon {
+    display: none;
+  }
